changed the folder 'image'  name

--- a/Seminar_2/index.html
+++ b/Seminar_2/index.html
@@ -18,7 +18,7 @@
         <hr>
         <img src="https://avatars.mds.yandex.net/i?id=67b656f273853ffeb2a7a453d646d253af9c6629-3922615-images-thumbs&n=13" alt="Астон Мартин">
         <p class="big_text">Картинка с абсолютной ссылкой</p>
-        <img src="Image/i.webp" alt="Фольксваген Пассат b6">
+        <img src="image/i.webp" alt="Фольксваген Пассат b6">
         <p class="big_text">Картинка с относительной ссылкой</p>
         <h3>Я умею</h3>
         <ul>
